syntax = "proto3";

option java_package = "ru.practicum.explorewithme.stats.grpc";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ===================================================================
// SERVICE 1: Collector Service (UserActionController)
// ===================================================================

service UserActionController {
  rpc CollectUserAction(UserActionProto) returns (google.protobuf.Empty);
}

enum ActionTypeProto {
  ACTION_UNKNOWN = 0;
  ACTION_VIEW = 1;
  ACTION_REGISTER = 2;
  ACTION_LIKE = 3;
}

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}


// ===================================================================
// SERVICE 2: Analyzer Service (RecommendationsController)
// ===================================================================

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto) returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto) returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto) returns (stream RecommendedEventProto);
}

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int64 event_ids = 1;
}

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}